mb before reabase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<!--  Copyright-->
+<!--  Copyright
+adding some change before rebase conflict
+
+-->
 <head>
 	<title>example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
