bunch of bullshit

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--  Copyright
 adding some change before rebase conflict
-ff
+
 -->
 <head>
 	<title>example ff </title>
@@ -18,7 +18,7 @@ ff
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some inddteresting stuff goes here
+			some interesting stuff goes here
 		</p>
 	</main>
 	<footer class="container">
