mb conflicting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--  Copyright
 adding some change before rebase conflict
-
+ff
 -->
 <head>
-	<title>example</title>
+	<title>example ff </title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,7 +18,7 @@ adding some change before rebase conflict
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting stuff goes here
+			some inddteresting stuff goes here
 		</p>
 	</main>
 	<footer class="container">
