Adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <!--  Copyright
-adding some change before rebase conflict
-
 -->
 <head>
-	<title>example ff </title>
+	<title>An example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
