--- a/simple.html
+++ b/simple.html
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Company 2fff014</p>
 	</footer>
 </body>
 </html>
