Done with simple.html updates

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!--  Copyright
 -->
 <head>
-	<title>An example</title>
+	<title>An simple example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,7 +16,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting stuff goes here
+			some interesting stuff and goes here
 		</p>
 	</main>
 	<footer class="container">
