--- a/simple.html
+++ b/simple.html
@@ -16,7 +16,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			some interesting stuff and goes here
+			some interesting stuff and goes here .
 		</p>
 	</main>
 	<footer class="container">
